<resources>
    <string name="app_name">Personaprog</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_out">Sair</string>
    <string name="action_search">Search</string>
    <string name="action_bundle">Bundle</string>
    <string name="action_layout">Layout</string>
    <string name="usuario">Usuário</string>
    <string name="senha">Senha</string>
    <string name="login">Login</string>
    <string name="estado">Estado</string>
    <string name="ConceitoBundle">A Classe android.os.Bundle é utilizada para passar parâmetro usando chave de valor. </string>
    <string name="CodigoBundle1">Enviar: Intent intent = new Intent(this,exemplo.class); intent.putExtra("nome", "PersonaProg"); startActivity(intent); </string>
    <string name="CodigoBundle2">Receber: Intent intent =getIntent(); intent.StringExtra("nome"); </string>

    <string name="frgListview">ListView Custom</string>
    <string name="frgGridview">Grid View</string>
</resources>
