<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">

    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_action_search"
        android:title="@string/action_search"
        app:actionViewClass="android.support.v7.widget.SearchView"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_share"
        android:icon="@drawable/ic_action_share"
        android:title="@string/action_search"

        app:showAsAction="always" />
    <item
        android:id="@+id/action_bundle"

        android:title="@string/action_bundle"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_layout"
        android:title="@string/action_layout"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_out"
        android:title="@string/action_out"
        app:showAsAction="never" />


</menu>
