<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
   style="@style/linearfragment"
android:id="@+id/txlinear"
    >


    <TextView android:text="TextView" style="@style/tituloexemplo" />

        <TextView android:text="@string/usuario" android:layout_width="match_parent" android:layout_height="wrap_content" android:padding="3dip" />
        <EditText android:id="@+id/campoologim"  android:layout_width="match_parent" android:layout_height="wrap_content" android:padding="3dip" android:inputType="text" />



        <TextView android:text="@string/senha"  android:layout_width="match_parent" android:layout_height="wrap_content"  />
        <EditText android:id="@+id/camposenha"  android:layout_width="match_parent" android:layout_height="wrap_content"  android:inputType="textPassword" />

        <Button android:id="@+id/btnlogin"  android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/login" />

</LinearLayout>
